@@ -66,21 +66,22 @@ import org.jenkinsci.plugins.scriptsecurity.sandbox.whitelists.Whitelisted;
 import org.jenkinsci.Symbol;
 import org.kohsuke.stapler.DataBoundConstructor;
 import org.kohsuke.stapler.DataBoundSetter;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 import org.kohsuke.stapler.export.Exported;
 
-import javax.servlet.ServletException;
+import jakarta.servlet.ServletException;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.OutputStreamWriter;
 import java.io.PrintStream;
+import java.io.Serial;
 import java.io.Serializable;
 import java.io.Writer;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.text.MessageFormat;
 import java.util.AbstractList;
 import java.util.ArrayList;
@@ -352,7 +353,6 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     }
 
     @Override
-    @Whitelisted
     public GitRepositoryBrowser getBrowser() {
         return browser;
     }
@@ -713,13 +713,13 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             listener.getLogger().println("[poll] Last Built Revision: " + buildData.lastBuild.revision);
         }
 
-        final EnvVars pollEnv = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener, false) : lastBuild.getEnvironment(listener);
+        final EnvVars pollEnv = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener, false) : lastBuild.getEnvironment(listener);
 
         final String singleBranch = getSingleBranch(pollEnv);
 
         if (!requiresWorkspaceForPolling(pollEnv)) {
 
-            final EnvVars environment = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener, false) : new EnvVars();
+            final EnvVars environment = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener, false) : new EnvVars();
 
             GitClient git = createClient(listener, environment, lastBuild, Jenkins.get(), null);
 
@@ -787,7 +787,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
 
         final Node node = GitUtils.workspaceToNode(workspace);
-        final EnvVars environment = project instanceof AbstractProject ? GitUtils.getPollEnvironment((AbstractProject) project, workspace, launcher, listener) : project.getEnvironment(node, listener);
+        final EnvVars environment = project instanceof AbstractProject<?,?> ap ? GitUtils.getPollEnvironment(ap, workspace, launcher, listener) : project.getEnvironment(node, listener);
 
         FilePath workingDirectory = workingDirectory(project,workspace,environment,listener);
 
@@ -915,9 +915,6 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         Git git = Git.with(listener, environment).in(ws).using(gitExe);
 
         GitClient c = git.getClient();
-        for (GitSCMExtension ext : extensions) {
-            c = ext.decorate(this,c);
-        }
 
         for (UserRemoteConfig uc : getUserRemoteConfigs()) {
             String ucCredentialsId = uc.getCredentialsId();
@@ -940,6 +937,10 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             }
         }
         // TODO add default credentials
+
+        for (GitSCMExtension ext : extensions) {
+            c = ext.decorate(this,c);
+        }
 
         return c;
     }
@@ -1166,7 +1167,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         buildData.saveBuild(revToBuild);
 
         if (buildData.getBuildsByBranchName().size() >= 100) {
-            log.println("JENKINS-19022: warning: possible memory leak due to Git plugin usage; see: https://plugins.jenkins.io/git/#remove-git-plugin-buildsbybranch-builddata-script");
+            log.println("JENKINS-19022: warning: possible memory leak due to Git plugin usage; see: https://plugins.jenkins.io/git/#plugin-content-remove-git-plugin-buildsbybranch-builddata-script");
         }
         boolean checkForMultipleRevisions = true;
         BuildSingleRevisionOnly ext = extensions.get(BuildSingleRevisionOnly.class);
@@ -1178,8 +1179,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             log.println("Multiple candidate revisions");
             if (checkForMultipleRevisions) {
                 Job<?, ?> job = build.getParent();
-                if (job instanceof AbstractProject) {
-                    AbstractProject project = (AbstractProject) job;
+                if (job instanceof AbstractProject<?,?> project) {
                     if (!project.isDisabled()) {
                         log.println("Scheduling another build to catch up with " + project.getFullDisplayName());
                         if (!project.scheduleBuild(0, new SCMTrigger.SCMTriggerCause("This build was triggered by build "
@@ -1433,7 +1433,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
         try {
             // Check for local remotes with no protocol like /path/to/repo.git/
-            return !Files.exists(Paths.get(remoteUrl));
+            return !Files.exists(Path.of(remoteUrl));
         } catch (InvalidPathException e) {
             return true;
         }
@@ -1832,10 +1832,12 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         public void setAddGitTagAction(boolean addGitTagAction) { this.addGitTagAction = addGitTagAction; }
 
         /**
-         * Old configuration of git executable - exposed so that we can
-         * migrate this setting to GitTool without deprecation warnings.
-         * @return git executable
+         * Old configuration of git executable, unused since 2023.
+         * Returns null in all cases.
+         * @deprecated use GitTool
+         * @return null
          */
+        @Deprecated(since = "5.11.0")
         public String getOldGitExe() {
             return null;
         }
@@ -1905,7 +1907,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
             return mergeOptions;
         }
 
-        public FormValidation doGitRemoteNameCheck(StaplerRequest req)
+        public FormValidation doGitRemoteNameCheck(StaplerRequest2 req)
                 throws IOException, ServletException {
             String mergeRemoteName = req.getParameter("value");
             boolean isMerge = req.getParameter("isMerge") != null;
@@ -1926,7 +1928,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
         }
 
         @Override
-        public boolean configure(StaplerRequest req, JSONObject formData) throws FormException {
+        public boolean configure(StaplerRequest2 req, JSONObject formData) throws FormException {
             req.bindJSON(this, formData);
             save();
             return true;
@@ -1958,6 +1960,7 @@ public class GitSCM extends GitSCMBackwardCompatibility {
 //        }
     }
 
+    @Serial
     private static final long serialVersionUID = 1L;
 
     @Whitelisted
@@ -2184,21 +2187,6 @@ public class GitSCM extends GitSCMBackwardCompatibility {
     @Deprecated
     public boolean getDoGenerateSubmoduleConfigurations() {
         return doGenerateSubmoduleConfigurations;
-    }
-
-    @Initializer(after=PLUGINS_STARTED)
-    public static void onLoaded() {
-        Jenkins jenkins = Jenkins.get();
-        DescriptorImpl desc = jenkins.getDescriptorByType(DescriptorImpl.class);
-
-        if (desc.getOldGitExe() != null) {
-            String exe = desc.getOldGitExe();
-            String defaultGit = GitTool.getDefaultInstallation().getGitExe();
-            if (exe.equals(defaultGit)) {
-                return;
-            }
-            System.err.println("[WARNING] you're using deprecated gitexe attribute to configure git plugin. Use Git installations");
-        }
     }
 
     @Initializer(before=JOB_LOADED)
